--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-table": "^7.8.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -29,6 +32,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.14",
+    "tailwind-children": "^0.5.0",
     "tailwindcss": "^3.1.4",
     "vite": "^2.9.9"
   }
