--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
