--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "name": "econicone",
-  "private": true,
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "eslint": "npx eslint src --fix --ext .js,.jsx"
-  },
-  "dependencies": {
-    "firebase": "^9.8.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-firebase-hooks": "^5.0.3",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-table": "^7.8.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.2",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "postcss": "^8.4.14",
-    "tailwind-children": "^0.5.0",
-    "tailwindcss": "^3.1.4",
-    "vite": "^2.9.9"
-  }
+	"name": "econicone",
+	"private": true,
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"eslint": "npx eslint src --fix --ext .js,.jsx"
+	},
+	"dependencies": {
+		"firebase": "^9.8.4",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-firebase-hooks": "^5.0.3",
+		"react-router": "^6.3.0",
+		"react-router-dom": "^6.3.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/aspect-ratio": "^0.4.0",
+		"@tailwindcss/forms": "^0.5.2",
+		"@tailwindcss/typography": "^0.5.2",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"@vitejs/plugin-react": "^1.3.0",
+		"autoprefixer": "^10.4.7",
+		"eslint": "^7.32.0 || ^8.2.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-react-app": "^7.0.1",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"postcss": "^8.4.14",
+		"tailwind-children": "^0.5.0",
+		"tailwindcss": "^3.1.4",
+		"vite": "^2.9.9"
+	}
 }
